--- a/package.json
+++ b/package.json
@@ -65,12 +65,14 @@
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-router": "^5.0.2",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-transition-group": "^2.9.2",
     "@types/seedrandom": "^2.4.28",
     "@types/serve-favicon": "^2.2.28",
     "@types/socket.io": "^1.4.38",
     "@types/socket.io-client": "^1.4.29",
     "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__react": "^4.0.2",
+    "@types/throttle-debounce": "^1.1.1",
     "@types/webpack": "^4.4.33",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-hot-middleware": "^2.16.5",
@@ -138,10 +140,12 @@
     "react-resize-detector": "^4.2.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-transition-group": "^4.2.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "three": "^0.106.2",
+    "throttle-debounce": "^2.1.0",
     "worker-loader": "^2.0.0",
     "xxhashjs": "^0.2.2"
   }
