--- a/module/tools/HDRCapture/CMakeLists.txt
+++ b/module/tools/HDRCapture/CMakeLists.txt
@@ -1,2 +1,6 @@
+FIND_PACKAGE(Aravis REQUIRED)
+FIND_PACKAGE(glib2 REQUIRED)
+
 # Build our NUClear module
-NUCLEAR_MODULE()
+NUCLEAR_MODULE(INCLUDES ${Aravis_INCLUDE_DIRS} ${glib2_INCLUDE_DIRS}
+               LIBRARIES ${Aravis_LIBRARY} ${glib2_LIBRARIES})
