Improve resizing logic in Three component (NUbots/NUsight2#286)
* Introduce aspect ratio enforcing with cover and contain modes.
* Favour using CSS property object-fit over manual JavaScript resizing.
* Debounce re-renders to improve performance.
* Reduce unnecessary container elements.
* Switch to use react-measure.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "^16.8.4",
     "@types/react-hot-loader": "^4.1.0",
+    "@types/react-measure": "^2.0.5",
     "@types/react-outside-click-handler": "^1.2.0",
     "@types/react-router": "^5.0.2",
     "@types/react-router-dom": "^4.3.4",
@@ -136,6 +137,7 @@
     "react": "^16.8.6",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
+    "react-measure": "^2.3.0",
     "react-outside-click-handler": "^1.2.3",
     "react-resize-detector": "^4.2.0",
     "react-router": "^5.0.1",
