Optimise TypeScript compile options (NUbots/NUsight2#288)
Following https://github.com/TypeStrong/ts-node#help-my-types-are-missing

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "coverage:ci": "yarn test:ci --coverage",
     "tslint": "tslint -c tslint.json 'src/**/*.ts{,x}' --exclude 'src/shared/proto/**'",
     "tslint:fix": "tslint -c tslint.json 'src/**/*.ts{,x}' --exclude 'src/shared/proto/**' --fix",
-    "tscheck": "tsc --project tsconfig.json",
-    "tscheck:watch": "yarn tsc --watch",
+    "tscheck": "tsc --project tsconfig.test.json",
+    "tscheck:watch": "yarn tsc --project tsconfig.test.json --watch",
     "protobuf": "node build_scripts/generate_messages.js",
     "postinstall": "yarn protobuf",
     "dev": "yarn start:virtual",
@@ -29,8 +29,8 @@
     "start:debug": "nodemon --inspect ./src/server/dev.ts",
     "start:virtual": "nodemon ./src/server/dev.ts --virtual-robots",
     "virtual-robots": "nodemon ./src/virtual_robots/run.ts",
-    "prod": "cross-env TS_NODE_FILES=true ts-node ./src/server/prod.ts",
-    "prod:virtual": "cross-env TS_NODE_FILES=true ts-node ./src/server/prod.ts --virtual-robots",
+    "prod": "ts-node ./src/server/prod.ts",
+    "prod:virtual": "ts-node ./src/server/prod.ts --virtual-robots",
     "build": "yarn clean:dist && webpack -p --progress --colors",
     "build:ci": "yarn clean:dist && webpack --ci --progress --colors",
     "clean": "yarn clean:dist && yarn clean:coverage",
@@ -77,10 +77,10 @@
     "@types/webpack": "^4.4.33",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-hot-middleware": "^2.16.5",
+    "@types/xxhashjs": "^0.2.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
-    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "4.0.0",
@@ -105,7 +105,7 @@
     "seedrandom": "^3.0.1",
     "style-loader": "0.23.1",
     "ts-jest": "23.10.5",
-    "ts-node": "^7.0.1",
+    "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "~4.0.0",
