Add ts-loader to replace awesome-typescript-loader (NUbots/NUsight2#289)

--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-hot-middleware": "^2.16.5",
     "@types/xxhashjs": "^0.2.1",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "caniuse-lite": "^1.0.30000983",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -105,6 +105,7 @@
     "seedrandom": "^3.0.1",
     "style-loader": "0.23.1",
     "ts-jest": "23.10.5",
+    "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "tslint-eslint-rules": "^5.4.0",
