--- a/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
+++ b/module/motion/OldWalkEngine/data/config/OldWalkEngine.yaml
@@ -86,23 +86,23 @@ walk_cycle:
     weight: 0.7
     offset: 0 * pi / 180
 
-    hip_rotation_scale: 1.0 # 2.0
-    ankle_rotation_scale: 0.25 # 0.5
+    hip_rotation_scale: 2.0
+    ankle_rotation_scale: 0.5
 
     angle_gain:
-      p: 0.05 # 0.1
-      i: 0.15
-      d: 0.05
+      p: 0.1
+      i: 0.0
+      d: 0.0
     translation_gain:
       X:
-        p: 0.05
-        d: 0.0
+        p: 0.0
+        d: -0.0
       Y:
-        p: 0.05
-        d: 0.0
+        p: 0
+        d: 0
       Z:
-        p: 0.05 #0.035
-        d: 0.0
+        p: 0.035
+        d: 0
     push_recovery:
       balance_time: 800
       enabled: false
