--- a/module/platform/darwin/HardwareIO/data/config/HardwareIO.yaml
+++ b/module/platform/darwin/HardwareIO/data/config/HardwareIO.yaml
@@ -1,20 +1,37 @@
 battery:
-  charged_voltage: 12.6
-  nominal_voltage: 11.1
-  flat_voltage: 10.7
+  charged_voltage: 16.8
+  nominal_voltage: 14.8
+  flat_voltage: 14.0
 
 bus_reset_wait_time_us: 0
 byte_wait: 1200
 packet_wait: 100000
 
+simulated:
+  #IMU drift in rad/s
+  imu_drift_rate: 0.0
+
+  noise:
+    accelerometer:
+      x: 0.01
+      y: 0.01
+      z: 0.01
+
+    gyroscope:
+      x: 0.01
+      y: 0.01
+      z: 0.01
+
+  bodyTilt:  25 * pi / 180 # set this to be the same as the WalkEngine.yaml:stance:bodyTilt TODO: read this from WalkEngine
+
 servos:
   -  # [0]  R_SHOULDER_PITCH
     direction: -1
-    offset: pi / 2
+    offset:  pi / 4
     simulated: false
   -  # [1]  L_SHOULDER_PITCH
-    direction: 1
-    offset: pi / 2
+    direction:  1
+    offset:  pi / 4
     simulated: false
   -  # [2]  R_SHOULDER_ROLL
     direction: -1
@@ -22,69 +39,69 @@ servos:
     simulated: false
   -  # [3]  L_SHOULDER_ROLL
     direction: -1
-    offset: pi / 4
+    offset:  pi / 4
     simulated: false
   -  # [4]  R_ELBOW
     direction: -1
-    offset: -pi / 2
+    offset:  0.0
     simulated: false
   -  # [5]  L_ELBOW
-    direction: 1
-    offset: -pi / 2
+    direction:  1
+    offset:  0.0
     simulated: false
   -  # [6]  R_HIP_YAW
     direction: -1
-    offset: 0.0
+    offset:  0.0
     simulated: false
   -  # [7]  L_HIP_YAW
     direction: -1
-    offset: 0.0
+    offset:  0.0
     simulated: false
   -  # [8]  R_HIP_ROLL
-    direction: -1
-    offset: 0.0
+    direction:  1
+    offset:  0.0
     simulated: false
   -  # [9]  L_HIP_ROLL
-    direction: -1
-    offset: 0.0
+    direction:  1
+    offset:  0.0
     simulated: false
   -  # [10] R_HIP_PITCH
-    direction: 1
-    offset: 0.0
+    direction:  1
+    offset:  0.0
     simulated: false
   -  # [11] L_HIP_PITCH
     direction: -1
-    offset: 0.0
+    offset:  0.0
     simulated: false
   -  # [12] R_KNEE
-    direction: 1
-    offset: 0.0
+    direction:  1
+    offset:  pi / 8
     simulated: false
   -  # [13] L_KNEE
     direction: -1
-    offset: 0.0
+    offset:  pi / 8
     simulated: false
   -  # [14] R_ANKLE_PITCH
     direction: -1
-    offset: 0.0
+    offset:  0.0
     simulated: false
   -  # [15] L_ANKLE_PITCH
-    direction: 1
-    offset: 0.0
+    direction:  1
+    offset:  0.0
     simulated: false
   -  # [16] R_ANKLE_ROLL
-    direction: 1
-    offset: 0.0
+    direction: -1
+    offset:  0.0
     simulated: false
   -  # [17] L_ANKLE_ROLL
-    direction: 1
-    offset: 0.0
+    direction: -1
+    offset:  0.0
     simulated: false
   -  # [18] HEAD_YAW
-    direction: 1
-    offset: 0.0
+    direction:  1
+    offset:  0.0
     simulated: false
   -   # [19] HEAD_PITCH
-    direction: 1
-    offset: 0.0
+    direction:  1
+    offset:  0.0
     simulated: false
