Strip down to the minimal requirements for building and add an attempt at building a library

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       args:
         platform: nuc7i7bnh
   native:
-    image: nubots:native
+    image: nubots:generic
     build:
       context: docker
       dockerfile: toolchain.Dockerfile
       args:
-        platform: native
+        platform: generic
