--- a/docker/files/abuild.conf
+++ b/docker/files/abuild.conf
@@ -1,7 +1,5 @@
-export CFLAGS="-Os -fomit-frame-pointer"
-export CXXFLAGS="$CFLAGS"
-export CPPFLAGS="$CFLAGS"
-export LDFLAGS="-Wl,--as-needed"
+# Read in our specific toolchain information
+source /usr/local/toolchain.sh
 
 export JOBS=$(nproc)
 export MAKEFLAGS=-j$JOBS
