Add support for remote development with vscode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,10 @@ services:
       dockerfile: toolchain.Dockerfile
       args:
         platform: generic
+  vscode:
+    image: nubots:vscode
+    volumes:
+      - .:/home/nubots/NUbots
+    build:
+      context: docker
+      dockerfile: vscode.Dockerfile
