--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,14 @@
 version: '3'
 services:
-  base:
-    image: nubots:base
-    build:
-      context: docker
-      dockerfile: base.Dockerfile
   nuc7i7bnh:
     image: nubots:nuc7i7bnh
     build:
       context: docker
-      dockerfile: toolchain.Dockerfile
+      dockerfile: Dockerfile
       args:
         platform: nuc7i7bnh
   generic:
     image: nubots:generic
     build:
       context: docker
-      dockerfile: toolchain.Dockerfile
-      args:
-        platform: generic
-  vscode:
-    image: nubots:vscode
-    volumes:
-      - .:/home/nubots/NUbots
-    build:
-      context: docker
-      dockerfile: vscode.Dockerfile
+      dockerfile: Dockerfile
