--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,16 +2,14 @@ steps:
   - label: "Validate Clang Format"
     command: "/code/NUbots/.buildkite/scripts/validate_format.sh"
     plugins:
-      - docker#v3.3.0:
-          image: "nubots/buildkite:0.3"
-          workdir: "/code/NUbots"
-          propagate-uid-gid: true
+      - docker-compose#v3.0.3:
+          config: docker-compose.yml
+          build: clang-format
+          run: clang-format
   - label: "Build for NUC"
     command: "/code/NUbots/.buildkite/scripts/build_code.sh"
     plugins:
-      - docker#v3.3.0:
-          image: "nubots/buildkite:0.3"
-          workdir: "/code/NUbots"
-          propagate-uid-gid: true
-          environment:
-            - "PLATFORM=nuc7i7bnh"
+      - docker-compose#v3.0.3:
+          config: docker-compose.yml
+          build: nuc7i7bnh
+          run: nuc7i7bnh
