--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,13 +1,25 @@
 steps:
+  # Build the docker images
+  - label: "Build Docker Images"
+    plugins:
+      - docker-compose#v3.0.3:
+          config: docker/docker-compose.yml
+          build:
+           - clang-format
+           - nuc7i7bnh
+
+  # Wait until they are built
+  - wait
+
   - label: "Validate Clang Format"
     command: "/code/NUbots/.buildkite/scripts/validate_format.sh"
     plugins:
       - docker-compose#v3.0.3:
           config: docker/docker-compose.yml
-          build: clang-format
+          run: clang-format
   - label: "Build for NUC"
     command: "/code/NUbots/.buildkite/scripts/build_code.sh"
     plugins:
       - docker-compose#v3.0.3:
           config: docker/docker-compose.yml
-          build: nuc7i7bnh
+          run: nuc7i7bnh
