Move docker compose into the root folder for paths

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,25 @@ services:
   clang-format:
     image: nubots:clang_format
     build:
-      context: .
+      context: docker
       dockerfile: clang_format.Dockerfile
     volumes:
-      - ..:/home/nubots/NUbots
+      - .:/home/nubots/NUbots
   nuc7i7bnh:
     image: nubots:nuc7i7bnh
     build:
-      context: .
+      context: docker
       dockerfile: nubots.Dockerfile
       args:
         platform: nuc7i7bnh
     volumes:
-      - ..:/home/nubots/NUbots
+      - .:/home/nubots/NUbots
   generic:
     image: nubots:generic
     build:
-      context: .
+      context: docker
       dockerfile: nubots.Dockerfile
       args:
         platform: generic
     volumes:
-      - ..:/home/nubots/NUbots
+      - .:/home/nubots/NUbots
