See if setting the image name stops buildkite from building it with it's own strange name that won't cache

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,6 +4,8 @@ steps:
     plugins:
       - docker-compose#v3.0.3:
           build: clang-format
+          image-name: nubots:clang-format
+      - docker-compose#v3.0.3:
           run: clang-format
   - label: "Build for NUC"
     command: "/home/nubots/NUbots/.buildkite/scripts/build_code.sh"
