What's in the folder?

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -8,9 +8,10 @@ steps:
       - docker-compose#v3.0.3:
           run: clang-format
   - label: "Build for NUC"
-    command: "/home/nubots/NUbots/.buildkite/scripts/build_code.sh"
+    command: "ls /home/nubots && /home/nubots/NUbots/.buildkite/scripts/build_code.sh"
     plugins:
       - docker-compose#v3.0.3:
           build: nuc7i7bnh
+          image-name: nubots:nuc7i7bnh
       - docker-compose#v3.0.3:
           run: nuc7i7bnh
