--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,8 +4,10 @@ steps:
     plugins:
       - docker-compose#v3.0.3:
           run: clang-format
+          workdir: /home/nubots/NUbots/
   - label: "Build for NUC"
     command: "/home/nubots/NUbots/.buildkite/scripts/build_code.sh"
     plugins:
       - docker-compose#v3.0.3:
           run: nuc7i7bnh
+          workdir: /home/nubots/NUbots/
