--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
-  clang-format:
-    image: nubots:clang-format
+  format:
+    image: nubots:format
     build:
       context: docker
-      dockerfile: clang-format.Dockerfile
+      dockerfile: format.Dockerfile
     volumes:
       - .:/home/nubots/NUbots
   nuc7i7bnh:
