Split the formatting jobs into multiple buildkite jobs

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,10 +1,25 @@
 steps:
-  - label: "Validate Clang Format"
-    command: ".buildkite/scripts/validate_format.sh"
+  # Formatting
+  - label: "Validate C++ and Protobuf formatting"
+    command: ".buildkite/scripts/validate_clang_format.sh"
     plugins:
       - docker-compose#v3.0.3:
           run: clang-format
           workdir: /home/nubots/NUbots/
+  - label: "Validate CMake formatting"
+    command: ".buildkite/scripts/validate_cmake_format.sh"
+    plugins:
+      - docker-compose#v3.0.3:
+          run: clang-format
+          workdir: /home/nubots/NUbots/
+  - label: "Validate Python formatting"
+    command: ".buildkite/scripts/validate_python_format.sh"
+    plugins:
+      - docker-compose#v3.0.3:
+          run: clang-format
+          workdir: /home/nubots/NUbots/
+
+  # Build for the NUC
   - label: "Build for NUC"
     command: ".buildkite/scripts/build_code.sh"
     plugins:
