Wrong docker service

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -4,19 +4,19 @@ steps:
     command: ".buildkite/scripts/validate_clang_format.sh"
     plugins:
       - docker-compose#v3.0.3:
-          run: clang-format
+          run: format
           workdir: /home/nubots/NUbots/
   - label: "Validate CMake formatting"
     command: ".buildkite/scripts/validate_cmake_format.sh"
     plugins:
       - docker-compose#v3.0.3:
-          run: clang-format
+          run: format
           workdir: /home/nubots/NUbots/
   - label: "Validate Python formatting"
     command: ".buildkite/scripts/validate_python_format.sh"
     plugins:
       - docker-compose#v3.0.3:
-          run: clang-format
+          run: format
           workdir: /home/nubots/NUbots/
 
   # Build for the NUC
