--- a/package.json
+++ b/package.json
@@ -36,36 +36,35 @@
     "clean": "yarn clean:dist && yarn clean:coverage",
     "clean:dist": "rimraf dist",
     "clean:coverage": "rimraf coverage",
-    "heroku-postbuild": "yarn build && yarn storybook:build",
-    "prepush": "yarn tslint"
+    "heroku-postbuild": "yarn build && yarn storybook:build"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-decorators": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-syntax-typescript": "^7.3.3",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/react": "^5.1.9",
-    "@types/classnames": "^2.2.8",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "@types/classnames": "^2.2.9",
     "@types/component-emitter": "^1.2.8",
-    "@types/compression": "0.0.36",
+    "@types/compression": "1.0.0",
     "@types/connect-history-api-fallback": "^1.3.2",
     "@types/copy-webpack-plugin": "^5.0.0",
     "@types/express": "^4.17.0",
     "@types/extract-text-webpack-plugin": "3.0.4",
-    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/html-webpack-plugin": "^3.2.1",
     "@types/jest": "^23.3.10",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^12.0.10",
-    "@types/pixi.js": "^4.8.6",
-    "@types/react": "16.8.22",
+    "@types/node": "^12.7.2",
+    "@types/pixi.js": "^4.8.8",
+    "@types/react": "16.9.2",
     "@types/react-color": "^3.0.1",
-    "@types/react-dom": "^16.8.4",
+    "@types/react-dom": "^16.8.5",
     "@types/react-measure": "^2.0.5",
     "@types/react-outside-click-handler": "^1.2.0",
-    "@types/react-router": "^5.0.2",
+    "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.4",
-    "@types/react-transition-group": "^2.9.2",
+    "@types/react-transition-group": "^4.2.2",
     "@types/seedrandom": "^2.4.28",
     "@types/serve-favicon": "^2.2.28",
     "@types/socket.io": "^1.4.38",
@@ -73,18 +72,18 @@
     "@types/storybook__addon-actions": "^3.4.3",
     "@types/storybook__react": "^4.0.2",
     "@types/throttle-debounce": "^1.1.1",
-    "@types/webpack": "^4.4.33",
-    "@types/webpack-dev-middleware": "^2.0.2",
+    "@types/webpack": "^4.32.2",
+    "@types/webpack-dev-middleware": "^2.0.3",
     "@types/xxhashjs": "^0.2.1",
     "babel-loader": "^8.0.6",
-    "caniuse-lite": "^1.0.30000983",
-    "copy-webpack-plugin": "^5.0.3",
+    "caniuse-lite": "^1.0.30000989",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "4.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "4.0.0-alpha",
-    "husky": "^2.4.1",
+    "husky": "^3.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "23.6.0",
     "jest-css-modules": "^1.1.0",
@@ -96,10 +95,10 @@
     "postcss-loader": "3.0.0",
     "postcss-reporter": "6.0.1",
     "postcss-url": "^8.0.0",
-    "raw-loader": "^3.0.0",
+    "raw-loader": "^3.1.0",
     "react-svg-loader": "2.1.0",
-    "rimraf": "^2.6.3",
-    "seedrandom": "^3.0.1",
+    "rimraf": "^3.0.0",
+    "seedrandom": "^3.0.3",
     "style-loader": "0.23.1",
     "ts-jest": "23.10.5",
     "ts-loader": "^6.0.4",
@@ -107,12 +106,12 @@
     "tslint": "^5.18.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "~4.0.0",
-    "typescript": "^3.5.2",
-    "url-loader": "2.0.0",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5",
+    "typescript": "^3.5.3",
+    "url-loader": "2.1.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
     "binary": "^0.3.0",
@@ -131,21 +130,26 @@
     "nuclearnet.js": "^1.5.4",
     "pixi.js": "^4.8.7",
     "protobufjs": "^6.8.8",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-color": "^2.17.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-measure": "^2.3.0",
-    "react-outside-click-handler": "^1.2.3",
+    "react-outside-click-handler": "^1.2.4",
     "react-resize-detector": "^4.2.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-transition-group": "^4.2.0",
+    "react-transition-group": "^4.2.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
-    "three": "^0.106.2",
+    "three": "^0.107.0",
     "throttle-debounce": "^2.1.0",
     "worker-loader": "^2.0.0",
     "xxhashjs": "^0.2.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn tslint"
+    }
   }
 }
