--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/express": "^4.17.0",
     "@types/extract-text-webpack-plugin": "3.0.4",
     "@types/html-webpack-plugin": "^3.2.1",
-    "@types/jest": "^23.3.10",
+    "@types/jest": "^24.0.18",
     "@types/minimist": "^1.2.0",
     "@types/node": "^12.7.2",
     "@types/pixi.js": "^4.8.8",
@@ -85,8 +85,8 @@
     "html-webpack-plugin": "4.0.0-alpha",
     "husky": "^3.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "23.6.0",
-    "jest-css-modules": "^1.1.0",
+    "jest": "^24.9.0",
+    "jest-css-modules": "^2.1.0",
     "nodemon": "^1.19.1",
     "postcss": "^7.0.17",
     "postcss-browser-reporter": "^0.6.0",
@@ -100,7 +100,7 @@
     "rimraf": "^3.0.0",
     "seedrandom": "^3.0.3",
     "style-loader": "0.23.1",
-    "ts-jest": "23.10.5",
+    "ts-jest": "24.0.2",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
