--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - type: bind
         source: .
-        target: /root/NUbots
+        target: /home/nubots/NUbots
         read_only: true
         consistency: cached
   nuc7i7bnh:
@@ -21,12 +21,12 @@ services:
     volumes:
       - type: bind
         source: .
-        target: /root/NUbots
+        target: /home/nubots/NUbots
         read_only: true
         consistency: cached
       - type: volume
         source: nuc7i7bnh_build
-        target: /root/NUbots/build
+        target: /home/nubots/NUbots/build
         consistency: delegated
   generic:
     image: nubots:generic
@@ -38,12 +38,12 @@ services:
     volumes:
       - type: bind
         source: .
-        target: /root/NUbots
+        target: /home/nubots/NUbots
         read_only: true
         consistency: cached
       - type: volume
         source: generic_build
-        target: /root/NUbots/build
+        target: /home/nubots/NUbots/build
         consistency: delegated
   native:
     image: nubots:native
@@ -55,12 +55,12 @@ services:
     volumes:
       - type: bind
         source: .
-        target: /root/NUbots
+        target: /home/nubots/NUbots
         read_only: true
         consistency: cached
       - type: volume
         source: native_build
-        target: /root/NUbots/build
+        target: /home/nubots/NUbots/build
         consistency: delegated
 volumes:
   native_build:
