Add cmake-format command to the dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -216,6 +216,7 @@ RUN install-from-source https://github.com/intel/media-driver/archive/intel-medi
 # Install python libraries
 RUN pip install \
     stringcase \
+    cmake-format \
     Pillow
 
 # Install tools needed for building individual modules as well as development tools
