Buildkite does not need volumes

--- a/.buildkite/docker-compose.yml
+++ b/.buildkite/docker-compose.yml
@@ -10,11 +10,8 @@ services:
       - type: bind
         source: ./..
         target: /home/nubots/NUbots
+        read_only: true
         consistency: cached
-      - type: volume
-        source: buildkite_generic
-        target: /home/nubots/NUbots/build
-        consistency: delegated
   nuc7i7bnh:
     image: nubots:nuc7i7bnh
     build:
@@ -25,11 +22,5 @@ services:
       - type: bind
         source: ./..
         target: /home/nubots/NUbots
+        read_only: true
         consistency: cached
-      - type: volume
-        source: buildkite_nuc7i7bnh
-        target: /home/nubots/NUbots/build
-        consistency: delegated
-volumes:
-  buildkite_generic:
-  buildkite_nuc7i7bnh:
