Add the build folder to docker to correct permissions

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -236,5 +236,6 @@ COPY home/nubots/.ssh/id_rsa.pub /home/nubots/.ssh/id_rsa.pub
 COPY home/nubots/.ssh/ssh_config /home/nubots/.ssh/ssh_config
 
 # Setup the locations where we will mount our folders
-RUN mkdir -p /home/nubots/NUbots/build
+RUN mkdir -p /home/nubots/NUbots
+RUN mkdir -p /home/nubots/build
 WORKDIR /home/nubots/NUbots
