Converts cmake keywords to lowercase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 
 # Set flag so NUClear uses a custom clock implementation
 # See utility::clock::CustomClock
-ADD_COMPILE_OPTIONS(-DNUCLEAR_CUSTOM_CLOCK)
+add_compile_options(-DNUCLEAR_CUSTOM_CLOCK)
 
 # We use additional modules that cmake needs to know about
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules/")
