--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,7 @@ if(STATIC_LIBRARIES)
   set(CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_STATIC_LIBRARY_SUFFIX} ${CMAKE_SHARED_LIBRARY_SUFFIX})
 endif()
 
-# Set flag so NUClear uses a custom clock implementation
-# See utility::clock::CustomClock
+# Set flag so NUClear uses a custom clock implementation See utility::clock::CustomClock
 add_compile_options(-DNUCLEAR_CUSTOM_CLOCK)
 
 # We use additional modules that cmake needs to know about
