--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -13,6 +13,7 @@
 		"ms-azuretools.vscode-docker",
 		"galarius.vscode-opencl",
 		"ms-python.python",
-		"zxh404.vscode-proto3"
+		"zxh404.vscode-proto3",
+		"redhat.vscode-yaml"
 	]
 }
