--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -237,6 +237,7 @@ RUN install-package \
     parallel
 
 # Copy ssh keys over to the system
+RUN install -d -m 0755 -o nubots -g nubots /home/nubots/.ssh
 COPY --chown=nubots:nubots home/nubots/.ssh/id_rsa /home/nubots/.ssh/id_rsa
 COPY --chown=nubots:nubots home/nubots/.ssh/id_rsa.pub /home/nubots/.ssh/id_rsa.pub
 COPY --chown=nubots:nubots home/nubots/.ssh/ssh_config /home/nubots/.ssh/ssh_config
