Need to look in ../build for the build folder (as it is on docker) as well as having rsync for installing

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -232,6 +232,7 @@ RUN install-package \
     arm-none-eabi-gcc \
     arm-none-eabi-newlib \
     openssh \
+    rsync \
     gdb \
     valgrind \
     colordiff \
