Make the usr/local symlink relative

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -45,7 +45,7 @@ RUN chown -R nubots:nubots /usr/local
 USER nubots
 
 # Make a symlink from /usr/local/lib to /usr/local/lib64 so library install location is irrelevant
-RUN ln -s /usr/local/lib /usr/local/lib64
+RUN cd /usr/local && ln -sf lib lib64
 
 # Copy across the generic toolchain file for building tools
 COPY --chown=nubots:nubots usr/local/toolchain/generic.sh /usr/local/toolchain.sh
